objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Account Alteration ARG</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Fechado e cancelado</fullName>
        </values>
        <values>
            <fullName>Fechado e resolvido</fullName>
        </values>
        <values>
            <fullName>Novo</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Alteração cadastro clientes</fullName>
        <description>Solicitação de alteração de cadastro de clientes.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Em análise - Controladoria</fullName>
        </values>
        <values>
            <fullName>Em análise - Crédito e cobrança</fullName>
        </values>
        <values>
            <fullName>Em análise - Customer Service</fullName>
        </values>
        <values>
            <fullName>Em análise - Planejamento Comercial</fullName>
        </values>
        <values>
            <fullName>Em aprovação %E2%80%93 Fiscal</fullName>
        </values>
        <values>
            <fullName>Fechado e resolvido</fullName>
        </values>
        <values>
            <fullName>Novo</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Reprovado</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Alteração rota de promotor</fullName>
        <description>Solicitação de alteração de rota de promotores.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Aprovado</fullName>
        </values>
        <values>
            <fullName>Em andamento</fullName>
        </values>
        <values>
            <fullName>Em espera</fullName>
        </values>
        <values>
            <fullName>Fechado e cancelado</fullName>
        </values>
        <values>
            <fullName>Fechado e resolvido</fullName>
        </values>
        <values>
            <fullName>Novo</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Não aprovado</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Cliente inadimplente</fullName>
        <description>Cliente inadimplente</description>
        <isActive>true</isActive>
        <values>
            <fullName>Análise pendente</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Em andamento</fullName>
        </values>
        <values>
            <fullName>Fechado e cancelado</fullName>
        </values>
        <values>
            <fullName>Fechado e resolvido</fullName>
        </values>
        <values>
            <fullName>Não aprovado</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Contrato</fullName>
        <description>Solicitações referentes a contratos.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Análise pendente</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Fechado e resolvido</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Contrato - Data de Vigencia Real</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Aprovado</fullName>
        </values>
        <values>
            <fullName>Em aprovação</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Fechado e resolvido</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Contrato - aprovação proposta</fullName>
        <description>Solicitações de aprovações de propostas de contratos.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Análise pendente</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Aprovado</fullName>
        </values>
        <values>
            <fullName>Não aprovado</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Contrato - assinatura do cliente</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Análise pendente</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Aprovado</fullName>
        </values>
        <values>
            <fullName>Não aprovado</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Contrato - conferência de documentação</fullName>
        <description>Coordenador analisa se documentação encaminhada pelo cliente está correta.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Análise pendente</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Encaminhado para correções</fullName>
        </values>
        <values>
            <fullName>Fechado e resolvido</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Contrato - solicitação de cancelamento</fullName>
        <description>Solicitações aprovação de cancelamento de contratos.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Análise pendente</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Aprovado</fullName>
        </values>
        <values>
            <fullName>Não aprovado</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Inadimplência justificada</fullName>
        <description>Inadimplência justificada manualmente pelo executivo de vendas.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Em andamento</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Inadimplência justificada</fullName>
        </values>
        <values>
            <fullName>Não aprovado</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>LAT_MX Account Alteration</fullName>
        <description>Support Process for Account Alteration for Mexico</description>
        <isActive>true</isActive>
        <values>
            <fullName>Fechado e cancelado</fullName>
        </values>
        <values>
            <fullName>Fechado e resolvido</fullName>
        </values>
        <values>
            <fullName>Novo</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Novo cadastro cliente</fullName>
        <description>Ações de conferência de novo cadastro de cliente</description>
        <isActive>true</isActive>
        <values>
            <fullName>Análise pendente</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Fechado e resolvido</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Overdue Account AR</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Novo</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pagamento efetuado</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Overdue Justification AR</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Acordo aprovado</fullName>
        </values>
        <values>
            <fullName>Análise pendente</fullName>
        </values>
        <values>
            <fullName>Aprovado</fullName>
        </values>
        <values>
            <fullName>Em análise - Crédito e cobrança</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Fechado e cancelado</fullName>
        </values>
        <values>
            <fullName>Fechado e resolvido</fullName>
        </values>
        <values>
            <fullName>Inadimplência justificada</fullName>
        </values>
        <values>
            <fullName>Novo</fullName>
        </values>
        <values>
            <fullName>Pagamento efetuado</fullName>
        </values>
        <values>
            <fullName>Solicitação devolvida para o Consultor</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Overdue to attorneys AR</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Aprovado</fullName>
        </values>
        <values>
            <fullName>Cancelamento encaminhado ao Jurídico</fullName>
        </values>
        <values>
            <fullName>Em aprovação - Comercial</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Fechado e cancelado</fullName>
        </values>
        <values>
            <fullName>Fechado e resolvido</fullName>
        </values>
        <values>
            <fullName>Solicitação devolvida para o Consultor</fullName>
        </values>
        <values>
            <fullName>Without customer proposal-Sent to Credit</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Payment Proposal AR</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Acordo aprovado</fullName>
        </values>
        <values>
            <fullName>Acordo rejeitado</fullName>
        </values>
        <values>
            <fullName>Aprovado</fullName>
        </values>
        <values>
            <fullName>Em aprovação - Comercial</fullName>
        </values>
        <values>
            <fullName>Em aprovação - Crédito e Cobrança</fullName>
        </values>
        <values>
            <fullName>Fechado e cancelado</fullName>
        </values>
        <values>
            <fullName>Fechado e resolvido</fullName>
        </values>
        <values>
            <fullName>Novo</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pagamento efetuado</fullName>
        </values>
        <values>
            <fullName>Solicitação devolvida para o Consultor</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Proposta de pagamento</fullName>
        <description>Proposta de pagamento de títulos de cobrança</description>
        <isActive>true</isActive>
        <values>
            <fullName>Acordo aprovado</fullName>
        </values>
        <values>
            <fullName>Acordo rejeitado</fullName>
        </values>
        <values>
            <fullName>Em aprovação - Crédito e Cobrança</fullName>
        </values>
        <values>
            <fullName>Em aprovação - Financeiro</fullName>
        </values>
        <values>
            <fullName>Em aprovação - Vendas</fullName>
        </values>
        <values>
            <fullName>Fechado e cancelado</fullName>
        </values>
        <values>
            <fullName>Novo</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Não aprovado</fullName>
        </values>
        <values>
            <fullName>Pagamento efetuado</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Prorrogação de proposta</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Análise pendente</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Aprovado</fullName>
        </values>
        <values>
            <fullName>Não aprovado pelo cliente</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sem proposta de pagamento</fullName>
        <description>Processo para cliente que não sugeriu proposta de pagamento</description>
        <isActive>true</isActive>
        <values>
            <fullName>Em análise - Crédito e cobrança</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Encerrado via Cartório</fullName>
        </values>
        <values>
            <fullName>Fechado e cancelado</fullName>
        </values>
        <values>
            <fullName>Não aprovado</fullName>
        </values>
        <values>
            <fullName>Pagamento efetuado</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Solicitações e reclamações</fullName>
        <description>Solicitações e reclamações de clientes/prospects</description>
        <isActive>true</isActive>
        <values>
            <fullName>Aprovado</fullName>
        </values>
        <values>
            <fullName>Em andamento</fullName>
        </values>
        <values>
            <fullName>Em aprovação</fullName>
        </values>
        <values>
            <fullName>Em espera</fullName>
        </values>
        <values>
            <fullName>Fechado e cancelado</fullName>
        </values>
        <values>
            <fullName>Fechado e resolvido</fullName>
        </values>
        <values>
            <fullName>Novo</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Não aprovado</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Término de contrato</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Análise pendente</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Aprovado</fullName>
        </values>
        <values>
            <fullName>Em processo de Carta de não renovação</fullName>
        </values>
        <values>
            <fullName>Em processo de não renovação</fullName>
        </values>
        <values>
            <fullName>Em processo de prorrogação</fullName>
        </values>
        <values>
            <fullName>Em processo de renovação</fullName>
        </values>
        <values>
            <fullName>Relatório devolvido para correções</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>WO Paymentm Proposal AR</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Acordo aprovado</fullName>
        </values>
        <values>
            <fullName>Aprovado</fullName>
        </values>
        <values>
            <fullName>Cancelamento encaminhado ao Jurídico</fullName>
        </values>
        <values>
            <fullName>Fechado e cancelado</fullName>
        </values>
        <values>
            <fullName>Fechado e resolvido</fullName>
        </values>
        <values>
            <fullName>Novo</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pagamento efetuado</fullName>
        </values>
        <values>
            <fullName>Solicitação devolvida para o Consultor</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AccountOwnerManager_AR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Owner Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccountOwner_AR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_Proposal__c</fullName>
        <label>Action Proposal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Renovação do contrato</fullName>
                </value>
                <value>
                    <fullName>Não renovação</fullName>
                </value>
                <value>
                    <fullName>Prorrogação do contrato</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amount_Type__c</fullName>
        <label>Amount Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Purposes_Action__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Allowance</fullName>
                </value>
                <value>
                    <fullName>Bonificação</fullName>
                </value>
                <value>
                    <fullName>KA Contratos</fullName>
                </value>
                <value>
                    <fullName>Off Trade - A&amp;P</fullName>
                </value>
                <value>
                    <fullName>Off Trade - Direto</fullName>
                </value>
                <value>
                    <fullName>Off Trade - Eventos</fullName>
                </value>
                <value>
                    <fullName>Off Trade - Indireto</fullName>
                </value>
                <value>
                    <fullName>Off Trade - KA</fullName>
                </value>
                <value>
                    <fullName>Off Trade - Tático</fullName>
                </value>
                <value>
                    <fullName>On Trade - Ativação &amp; Materiais POS</fullName>
                </value>
                <value>
                    <fullName>On Trade - Contratos</fullName>
                </value>
                <value>
                    <fullName>On Trade - Eventos Nacionais</fullName>
                </value>
                <value>
                    <fullName>KA - Verba preço promocionado</fullName>
                </value>
                <value>
                    <fullName>On trade - Verba venda direta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Rejection_Date__c</fullName>
        <label>Approval / Rejection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Area_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Area Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Casos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bairro_Fatura__c</fullName>
        <formula>Account.Revenue_Neighbourhood__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bairro Fatura</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Begin_Contract_Date__c</fullName>
        <formula>LAT_Contract__r.StartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Begin Contract Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Breach_description__c</fullName>
        <label>Breach (description)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CEP_Fatura__c</fullName>
        <formula>Account.Revenue_Postal_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CEP Fatura</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancellation_Defined__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancellation Defined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseOwnerManager_AR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Owner Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Checked_over_by_Dis_Coordinator__c</fullName>
        <label>Checked over by</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Checked_over_by_Dis_Del_Customer__c</fullName>
        <label>Checked over by</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Checked_over_by_Dis_Director__c</fullName>
        <label>Checked over by</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Checked_over_by_Dis_Manager__c</fullName>
        <label>Checked over by</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Checked_over_by_Dis_Sig_Customer__c</fullName>
        <label>Checked over by</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Checked_over_by_regional_filed__c</fullName>
        <label>Checked over by</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Checked_over_by_terms__c</fullName>
        <label>Checked over by</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cidade_Fatura__c</fullName>
        <formula>Account.Revenue_City__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cidade Fatura</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clause__c</fullName>
        <label>Clause</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company_Signatory_2__c</fullName>
        <label>Company Signatory</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Signatory__c</fullName>
        <label>Company Signatory</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Signature_Date__c</fullName>
        <label>Company Signature Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Deadline_months__c</fullName>
        <label>Contract Deadline (months)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Link__c</fullName>
        <formula>&quot;https://cs3.salesforce.com/&quot;&amp; LAT_Contract__r.Id</formula>
        <label>Contract Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <formula>LAT_Contract__r.Numero_do_contrato__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Counterparts__c</fullName>
        <label>Counterparts</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Credit_Analysis_AR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Analysis</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>CRA_CredAnalysis_ARG__c.Account_ARG__r.Id</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>CRA_CredAnalysis_ARG__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Analysis__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campo obrigatório quando o motivo da demanda for alteração de limite de crédito.</description>
        <inlineHelpText>Campo obrigatório quando o motivo da demanda for alteração de limite de crédito.</inlineHelpText>
        <label>Credit Analysis</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Analise_de_credito__c.Conta__c</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <infoMessage>Indique a análise de crédito.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Analise_de_credito__c</referenceTo>
        <relationshipLabel>Demandas de Alteração de limite de crédito</relationshipLabel>
        <relationshipName>Casos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Signatory_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Signatory</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>Contact.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Demandas (Signatário do cliente)</relationshipLabel>
        <relationshipName>Demandas2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Signatory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Signatory</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>Contact.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Demandas</relationshipLabel>
        <relationshipName>Demandas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Signature_Date__c</fullName>
        <label>Customer Signature Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Situation__c</fullName>
        <formula>IF ( Account.Overdue__c , IMAGE(&quot;https://c.cs3.content.force.com/servlet/servlet.ImageServer?id=015Q00000001OZk&amp;oid=00DQ0000000EAzg&amp;lastMod=1337614026000&quot;, &quot;Cliente inadimplente&quot;,15,150), &quot;Cliente Adimplente&quot;)</formula>
        <label>Customer Situation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_is_KA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies if customer is a Key Account. It will be used for sharing rule &quot;Compartilha cliente filho com KA&quot;in order to share the child accounts with key accounts. It&apos;s invisible for user interface.</description>
        <label>Customer is KA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DA_Number__c</fullName>
        <label>D.A Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Case Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Status,&quot;&quot;),&quot;Status, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL( Type ,&quot;&quot;), &quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Origin ,&quot;&quot;), &quot;Origin, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Reason ,&quot;&quot;), &quot;Reason, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Priority ,&quot;&quot;), &quot;Priority, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN( Subject )&lt;5, &quot;Meaningful Subject Line&quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( OR(LEN(ContactId)=0,LEN( AccountId)=0), &quot;Associated Account and Contact&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( OR(LEN(ContactId)=0,LEN( AccountId)=0), 0,10) + IF( ISPICKVAL( Status ,&quot;&quot;), 0,15) + IF( ISPICKVAL( Type ,&quot;&quot;), 0,15) + IF( ISPICKVAL( Origin ,&quot;&quot;), 0,15) + IF( ISPICKVAL(   Reason ,&quot;&quot;), 0,15) + IF(ISPICKVAL(Priority, &quot;&quot;),0,15) + IF(LEN( Subject )&lt;5,0,15)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_of_expiration_of_the_validity__c</fullName>
        <formula>LAT_Contract__r.EndDate__c</formula>
        <label>Date of expiration of the validity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Contract_Date__c</fullName>
        <formula>LAT_Contract__r.EndDate__c</formula>
        <label>End Contract Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_de_Fatura__c</fullName>
        <formula>Account.Revenue_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End de Fatura</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Financial Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year_description__c</fullName>
        <formula>Grouping_Fiscal_Year__r.Ano_Fiscal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Year (description)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gerente_regional_KAM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gerente regional / KAM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grouping_Fiscal_Year__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grouping Fiscal Year</label>
        <referenceTo>Agrupamento_Fiscal_Year__c</referenceTo>
        <relationshipLabel>Casos</relationshipLabel>
        <relationshipName>Casos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inquiry_Held__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inquiry Held</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integration_Message__c</fullName>
        <description>Campo apenas para integração</description>
        <label>Integration Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Integration_Status__c</fullName>
        <label>Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aguardando Resposta</fullName>
                </value>
                <value>
                    <fullName>Reservado</fullName>
                </value>
                <value>
                    <fullName>Erro de integração</fullName>
                </value>
                <value>
                    <fullName>Não possui Saldo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_APStep__c</fullName>
        <label>AP Step</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_BR_CreditLimit__c</fullName>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LAT_BR_RealValidityDate__c</fullName>
        <label>Real Validity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LAT_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LAT_Contract</label>
        <referenceTo>LAT_Contract__c</referenceTo>
        <relationshipLabel>Demandas</relationshipLabel>
        <relationshipName>Demandas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_MX_CCManagerOrExecutive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is hidden for the user and is completed by the trigger &apos;LAT_MX_CaseBeforeInsert&apos; everytime a record is inserted and is used for the Approval Process. If the Record Type of the record is &apos;LAT_MX_CSE_AccountAlterationCreditAndCollections&apos; and the Case Reason is &apos;Registration deposit cash payment&apos; and the Account related to the Case has a user in the field &apos;LAT_MX_CreditAndCollectionsExecutive__c&apos; this user is copied to this field. If the Case Reason is &apos;Payment Term Modification&apos; depending on the Channel of the Account related to the record this field is completed with the Manager of &apos;Miguel Vega&apos; or &apos;Veronica Morales&apos;.</description>
        <label>C&amp;C Manager or Executive</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Recebe o gerente do usuário (proprietário) para utilização no envio de email de alerta. Campo copiado pela trigger CasoCopiaIdGerenteRegionalArea.</description>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Casos2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>N_de_Faturamento__c</fullName>
        <formula>Account.Revenue_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nº de Faturamento</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note_signatories__c</fullName>
        <label>Note Signatories</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Objective__c</fullName>
        <label>Objective</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>